WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127581
Bad assertion in CodeBlock::removeBreakpoint()
https://bugs.webkit.org/show_bug.cgi?id=127581
Summary
Bad assertion in CodeBlock::removeBreakpoint()
Mark Lam
Reported
2014-01-24 13:34:41 PST
The assertion should be "ASSERT(m_numBreakpoints >= numBreakpoints);", not "ASSERT(m_numBreakpoints > numBreakpoints);". Patch coming.
Attachments
the patch.
(1.19 KB, patch)
2014-01-24 13:36 PST
,
Mark Lam
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-01-24 13:36:29 PST
Created
attachment 222149
[details]
the patch.
Joseph Pecoraro
Comment 2
2014-01-24 13:39:32 PST
Comment on
attachment 222149
[details]
the patch. r=me
Mark Lam
Comment 3
2014-01-24 13:42:36 PST
Thanks. Landed in
r162722
: <
http://trac.webkit.org/r162722
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug