Fixed a bad assertion in CodeBlock::removeBreakpoint(). <https://webkit.org/b/127581>

Reviewed by Joseph Pecoraro.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::removeBreakpoint):



Canonical link: https://commits.webkit.org/145589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162722 268f45cc-cd09-0410-ab3c-d52691b4dbfc